--- a/auth_server/src/main/resources/application.yml
+++ b/auth_server/src/main/resources/application.yml
@@ -1,12 +1,15 @@
 server:
-  port: 8081
+  port: 8078
 spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/oauth2?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    username: root
   session:
     store-type: redis
-  # 应用名称
   application:
-    name: notification-service
-
+    # 应用名称
+    name: auth-service
 eureka:
   instance:
     # 使用 ip 代替实例名
