--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -7,9 +7,50 @@ spring:
     username: root
   session:
     store-type: redis
-zuul:
-  routes:
-    resource:
-      path: /resource/**
-      url: http://localhost:8081
-      sensitive-headers:
+  application:
+    # 应用名称
+    name: gateway-master
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          # 是否和服务注册与发现组件结合，设置为 true 后可以直接使用应用名称调用服务
+          enabled: true
+      # 路由（routes：路由，它由唯一标识（ID）、目标服务地址（uri）、一组断言（predicates）和一组过滤器组成（filters）。filters 不是必需参数。）
+      routes:
+        # 路由标识（id：标识，具有唯一性）   简单尝试
+        - id: noti-router
+          # 目标服务地址（uri：地址，请求转发后的地址）
+          uri: http://localhost:8081
+          # 路由条件（predicates：断言，匹配 HTTP 请求内容）
+          predicates:
+            - Path=/v1/noti/**
+          filters:
+            - StripPrefix=2
+            - PreserveHostHeader
+        # 路由标识（id：标识，具有唯一性）   简单尝试
+        - id: auth-router
+          # 目标服务地址（uri：地址，请求转发后的地址）
+          uri: http://localhost:8078
+          # 路由条件（predicates：断言，匹配 HTTP 请求内容）
+          predicates:
+            - Path=/v1/auth/**
+          filters:
+            - StripPrefix=2
+            - PreserveHostHeader
+eureka:
+  instance:
+    # 使用 ip 代替实例名
+    prefer-ip-address: true
+    # 实例的主机名
+    hostname: ${spring.cloud.client.ip-address}
+    # 实例的 ID 规则
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
+  client:
+    serviceUrl:
+      # 注册中心地址
+      defaultZone: http://${eureka.instance.hostname}:8079/eureka/
+logging:
+  level:
+    # log 级别
+    org.springframework.cloud.gateway: debug
