--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>domain</module>
         <module>dao</module>
         <module>service</module>
+        <module>eureka_server</module>
+        <module>auth_server</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -52,11 +54,6 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
