--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -7,11 +7,18 @@ spring:
     username: root
   session:
     store-type: redis
+    timeout: 1800
   application:
     # 应用名称
     name: gateway-master
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]': # 匹配所有请求
+            allowedOrigins: "*"
+            allowedMethods: "*"
+            allowedHeaders: "*"
       discovery:
         locator:
           # 是否和服务注册与发现组件结合，设置为 true 后可以直接使用应用名称调用服务
@@ -26,18 +33,18 @@ spring:
           predicates:
             - Path=/v1/noti/**
           filters:
+            - SaveSession
             - StripPrefix=2
-            - PreserveHostHeader
-        # 路由标识（id：标识，具有唯一性）   简单尝试
-        - id: auth-router
-          # 目标服务地址（uri：地址，请求转发后的地址）
-          uri: http://localhost:8078
-          # 路由条件（predicates：断言，匹配 HTTP 请求内容）
-          predicates:
-            - Path=/v1/auth/**
-          filters:
-            - StripPrefix=2
-            - PreserveHostHeader
+#        # 路由标识（id：标识，具有唯一性）   简单尝试
+#        - id: auth-router
+#          # 目标服务地址（uri：地址，请求转发后的地址）
+#          uri: http://localhost:8078
+#          # 路由条件（predicates：断言，匹配 HTTP 请求内容）
+#          predicates:
+#            - Path=/v1/auth/**
+#          filters:
+#            - StripPrefix=2
+#            - PreserveHostHeader
 eureka:
   instance:
     # 使用 ip 代替实例名
