--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
   port: 8080
 spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/oauth2?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-    username: root
-  session:
-    store-type: redis
-    timeout: 1800
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/oauth2?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+#    username: root
+#  session:
+#    store-type: redis
+#    timeout: 1800
   application:
     # 应用名称
     name: gateway-master
@@ -33,18 +33,17 @@ spring:
           predicates:
             - Path=/v1/noti/**
           filters:
-            - SaveSession
             - StripPrefix=2
-#        # 路由标识（id：标识，具有唯一性）   简单尝试
-#        - id: auth-router
-#          # 目标服务地址（uri：地址，请求转发后的地址）
-#          uri: http://localhost:8078
-#          # 路由条件（predicates：断言，匹配 HTTP 请求内容）
-#          predicates:
-#            - Path=/v1/auth/**
-#          filters:
-#            - StripPrefix=2
-#            - PreserveHostHeader
+        # 路由标识（id：标识，具有唯一性）   简单尝试
+        - id: auth-router
+          # 目标服务地址（uri：地址，请求转发后的地址）
+          uri: http://localhost:8078
+          # 路由条件（predicates：断言，匹配 HTTP 请求内容）
+          predicates:
+            - Path=/v1/auth/**
+          filters:
+            - StripPrefix=2
+#            - RedirectTo=302, http://localhost:8080/v1/auth/login
 eureka:
   instance:
     # 使用 ip 代替实例名
