完成微服务验证

--- a/auth_server/src/main/resources/application.yml
+++ b/auth_server/src/main/resources/application.yml
@@ -22,3 +22,7 @@ eureka:
     serviceUrl:
       # 注册中心地址
       defaultZone: http://${eureka.instance.hostname}:8079/eureka/
+logging:
+  level:
+    # log 级别
+    org.springframework.security: debug
