--- a/notification_center/src/main/resources/application.yml
+++ b/notification_center/src/main/resources/application.yml
@@ -11,6 +11,13 @@ spring:
   # 应用名称
   application:
     name: notification-service
+# feign调用超时时间配置
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 10000
+        readTimeout: 600000
 #Mybatis配置
 mybatis:
   configuration:
