--- a/user_center/src/main/resources/application.yml
+++ b/user_center/src/main/resources/application.yml
@@ -1,11 +1,45 @@
 server:
   port: 8082
+
 spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/anop?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password:
   session:
     store-type: redis
   # 应用名称
   application:
     name: user-service
+  mail:
+    host: smtp.qq.com #发送邮件服务器
+    username: 1532760526@qq.com #QQ邮箱
+    password: gaekwsdvaktpjaig #客户端授权码
+    protocol: smtp #发送邮件协议
+    properties.mail.smtp.auth: true
+    properties.mail.smtp.port: 465 #端口号465或587
+    properties.mail.display.sendmail: Javen
+    properties.mail.display.sendname: ANOP
+    properties.mail.smtp.starttls.enable: true
+    properties.mail.smtp.starttls.required: true
+    properties.mail.smtp.ssl.enable: true
+    default-encoding: utf-8
+  servlet:
+    multipart:
+      max-file-size: 16MB
+      max-request-size: 16MB
+  thymeleaf:
+    cache: false
+
+#Mybatis配置
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+    #sql语句打印
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations:
+    - classpath:mybatis/mapper/*.xml
 
 eureka:
   instance:
