--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>auth_server</module>
         <module>todo</module>
         <module>user_center</module>
+        <module>common</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
