--- a/notification_center/src/main/resources/application.yml
+++ b/notification_center/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8081
 spring:
+  jackson:
+    serialization:
+      write-dates-as-timestamps: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/anop?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
