--- a/user_center/src/main/resources/application.yml
+++ b/user_center/src/main/resources/application.yml
@@ -14,8 +14,8 @@ spring:
     name: user-service
   mail:
     host: smtp.qq.com #发送邮件服务器
-    username: 1532760526@qq.com #QQ邮箱
-    password: gaekwsdvaktpjaig #客户端授权码
+    username: xxxxxxxx@qq.com #QQ邮箱
+    password: xxxxxxxx #客户端授权码
     protocol: smtp #发送邮件协议
     properties.mail.smtp.auth: true
     properties.mail.smtp.port: 465 #端口号465或587
